--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "sample_project",
   "version": "1.0.0",
   "description": "",
-  "main": "Gruntfile.js",
-
+  "main": "index.js",
   "devDependencies": {
+    "electron-prebuilt": "^0.37.2",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
@@ -15,7 +15,7 @@
     "time-grunt": "^1.3.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "author": "",
   "license": "ISC"
