--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
+    "babel-cli": "^6.6.5",
     "electron-prebuilt": "^0.37.2",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^1.0.0",
