--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-execute": "^0.2.2",
     "grunt-jscs": "^2.8.0",
+    "grunt-run": "^0.5.2",
     "jshint-stylish": "^2.1.0",
     "load-grunt-tasks": "^3.4.1",
     "time-grunt": "^1.3.0"
