--- a/package.json
+++ b/package.json
@@ -2,19 +2,6 @@
   "name": "sample_project",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "electron-prebuilt": "^0.37.2",
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-execute": "^0.2.2",
-    "grunt-jscs": "^2.8.0",
-    "grunt-run": "^0.5.2",
-    "jshint-stylish": "^2.1.0",
-    "load-grunt-tasks": "^3.4.1",
-    "time-grunt": "^1.3.0"
-  },
   "scripts": {
     "start": "electron ."
   },
@@ -29,5 +16,8 @@
     "url": "https://github.com/Anabad/TP_Javascript_Kevin_Maite_Anand/issues"
   },
   "homepage": "https://github.com/Anabad/TP_Javascript_Kevin_Maite_Anand#readme",
-  "description": ""
+  "description": "TODO",
+  "devDependencies": {
+    "electron-prebuilt": "^0.37.2"
+  }
 }
