--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
   "description": "TODO",
   "devDependencies": {
     "chalk": "^1.1.1",
-    "electron-prebuilt": "^0.37.2"
+    "electron-prebuilt": "^0.37.2",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-jscs": "^2.8.0",
+    "jshint-stylish": "^2.1.0",
+    "load-grunt-tasks": "^3.4.1",
+    "time-grunt": "^1.3.0"
   }
 }
